v1.2.12
- TWEAK: Improve header menu and sub menu CSS to support shrunk logo on Sticky mode.

v1.2.11
- FIX: WooCommerce cart's cross sells hiding option bug when using 2 columns layout.
- FIX: WooCommerce quantity increment button's Javascript for better compatibility with 3rd party plugins.
- FIX: WooCommerce products grid's AJAX add to cart loading button CSS.
- FIX: Remove bottom border on WooCommerce's cart table when on mobile view.

v1.2.10
- TWEAK: Improve mobile header dropdown behavior: clicking the menu link will also open the dropdown.
- FIX: Mobile header dropdown bug from v1.2.9.

v1.2.9
- FIX: WooCommerce cart's cross sells hiding option.
- FIX: WooCommerce product's gallery and summary width CSS.
- FIX: Border radius on "toggle buttons".
- FIX: Javascript error in IE 11 browser.
- FIX: Click event handler of non link elements on older Mobile Safari browser.

v1.2.8
- TWEAK: Improve WooCommerce product CSS.
- FIX: Elementor Pro's Theme Builder compatibility bug.

v1.2.7
- TWEAK: Improve Gutenberg editor CSS.
- TWEAK: Improve accesssibility supports.
- FIX: Gutenberg columns responsive CSS.
- FIX: Header menu hightlight CSS.
- FIX: Elementor Pro's Theme Builder compatibility bug.

v1.2.6
- FIX: Scroll to Top javascript.
- FIX: Javascript warning in Firefox browser.

v1.2.5
- TWEAK: Refactor all javascript's event handlers with "Event Delegation" for better performance.
- TWEAK: Improve WooCommerce quantity increment buttons CSS (larger size, more mobile friendly).
- TWEAK: Improve WooCommerce quantity increment buttons JS.
- TWEAK: Allow WooCommerce product gallery width to be less than 50% (now 25% is the minimum width).
- FIX: Gutenberg columns CSS.

v1.2.4
- NEW: Update Google Fonts list (from 916 fonts to 977 fonts).
- NEW: Option to hide featured image on blog posts layout (Default and Grid layout).
- FIX: Header submenu style.
- FIX: Gutenberg `alignwide` and `alignfull` CSS.

v1.2.3
- FIX: Header mobile drawer's overflow scrolling CSS.